test/files/neg/macro-override-method-overrides-macro.check
Macros_Test_2.scala:8: error: overriding macro method foo in class B of type (x: String)Unit;
 method foo cannot override a macro
  override def foo(x: String) = println("fooDString")
               ^
one error found
